# huffman-archiver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bitio.h  huffman_codec.c  huffman_tree.c
.cache/clangd/index/: bitio.c.F6EA763C60242525.idx  bitio.h.EF3024152BF6C031.idx  huffman_codec.c.37614EA7820B9564.idx  huffman_codec.h.B4307FF8326E31AF.idx  huffman_tree.c.C6C054433281FBB1.idx  huffman_tree.h.ADC4AE0CE471D2A5.idx  main.c.8C6E51A919796CB8.idx
.github/workflows/: ci.yml  codeql.yml
experiments/: analyze.py  generate_data.sh  run_all.sh
experiments/benchmark/: benchmark.sh
include/: bitio.h  huffman_codec.h  huffman_tree.h
report/: review.tex
report/vkr/: 000_intro.tex  010_task.tex  020_related.tex  030_solution.tex  040_experiment.tex  050_conclusion.tex  Makefile  matmex-diploma-custom.cls  preamble.tex  title.tex  vkr.bib  vkr.tex
src/: bitio.c  huffman_codec.c  huffman_tree.c  main.c
tests/: test.sh
tests/unit/: test.h  test_bitio.c  test_codec.c  test_corrupt.c  test_header.c  test_random.c  test_tree.c
